# surface_deformation

./: .gitignore  mypy.ini  numericalError.md  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
examples/: Example_1.ipynb
src/yadeGrid/: __init__.py  body.py  interaction.py  simulations.py  singleton.py  vectorFunc.py  yadeTypes.py
tests/: bendingMomentTest.json  normalForceTest.json  test_body.py  test_interaction.py  test_singleton.py  test_vectorFunc.py  torsionMomentTestAngVel_5e4.json  torsionMomentTestangVel_1.0.json
tests/yadeResults/: TotalForceTorque.json  shearPerpAngVel_body1.json  shearPerpLinearVel.json  torsionBendingTest.json
yadeTests/: yadeTest_normal_force.py  yadeTest_shearPerpAngularVel_body0.py  yadeTest_shearPerpAngularVel_body1.py  yadeTest_shearPerpLinVel.py  yadeTest_stiffnesses.py  yadeTest_torsionBending.py  yadeTest_torsionalTorque.py  yadeTest_totalForceTorque.py
