[metadata]
name = yadeGrid
description = simulate surface deformation using models used in the Yade DEM software
author = Rohit K. John
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    yadeGrid
install_requires =
    attrs>=23.1.0
    numba>=0.56.4
    numpy>=1.23.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
yadeGrid = py.typed

[flake8]
max-line-length = 160
ignore = E221, E303, E222, E116, E241